# phoneSynth

./: README.md  build.gradle.kts  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/phonesynth/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Oscillator.cpp  native-lib.cpp
app/src/main/cpp/components/: LFO.cpp  LFO.h  Morph.cpp  Morph.h  Oscillator.cpp  Oscillator.h  Waveforms.cpp  Waveforms.h  Wavetable.cpp  Wavetable.h  utils.h
app/src/main/cpp/effects/: Chorus.cpp  Chorus.h  EffectUnit.h  Reverb.cpp  Reverb.h  StateVariableFilter.cpp  StateVariableFilter.h  compressor.cpp  compressor.h  distortion.cpp  distortion.h
app/src/main/java/com/example/phonesynth/: MIDI.kt  MainActivity.kt  SensorViewModel.kt
app/src/main/java/com/example/phonesynth/component/: AudioController.kt  AudioEngine.kt  Oboe.kt  ParamMapping.kt  ParameterProcessor.kt  Repository.kt  Sensor.kt  SensorController.kt  Sensors.kt  ToneRepository.kt
app/src/main/java/com/example/phonesynth/connection/: ConnectionController.kt  ConnectionManager.kt  ConnectionStatus.kt  RoomInfo.kt
app/src/main/res/drawable/: navigate_before.xml  refresh.xml  screen_rotation.xml  sync_alt.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/phonesynth/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/main/java/com/example/phonesynth/ui/: MainActivity.kt
src/main/res/values/: themes.xml
(+25 files in other folders)
